[package]
name = "crawlkit_rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "crawlkit_rs"
crate-type = ["cdylib"]

[dependencies]
blake3 = "1.8.3"
dashmap = "6.1.0"
pyo3 = { version = "0.27.0", features = ["abi3-py311"] }
rayon = "1.11.0"
regex = "1.12.3"
scraper = "0.25.0"
url = "2.5.8"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true    # strip debug symbols from release wheel]
