[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name            = "crawlkit"
version         = "0.1.0"
description     = "Production reliability layer for async web crawling pipelines"
readme          = "README.md"
requires-python = ">=3.11"
license         = { text = "MIT" }
keywords        = ["web-crawling", "scraping", "rag", "rust", "performance"]
dependencies    = [
    "firecrawl-py>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "typer>=0.12",
    "pydantic>=2.0",
    "lxml>=6.0.2",
    "selectolax>=0.4.7",
    "tiktoken>=0.12.0",
]

[project.urls]
Repository = "https://github.com/vivekjami/crawlkit"

[tool.maturin]
python-source = "python"
module-name   = "crawlkit.crawlkit_rs"
features      = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version         = "3.11"
strict                 = true
ignore_missing_imports = true
exclude                = ["tests", "benchmarks"]

[dependency-groups]
dev = [
    "blake3>=1.0.8",
    "datasets>=4.7.0",
    "maturin>=1.12.6",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
